Backport of SVN commit 1158057: Remove the workaround to show the tooltip temporary on a hidden position, to have a valid layout. Based on Maciej Mrozowski's patch this is now done by postponing the showing of the tooltip until the meta-data and the preview has been received.

BUG: 245491
FIXED-IN: 4.5.1


svn path=/branches/KDE/4.5/kdebase/apps/; revision=1160679