src/viewextensionsfactory.cpp
@@ -61,7 +61,7 @@ ViewExtensionsFactory::ViewExtensionsFactory(QAbstractItemView* view,
         m_toolTipManager = new ToolTipManager(view, proxyModel);
 
         connect(dolphinViewController, SIGNAL(hideToolTip()),
-                m_toolTipManager, SLOT(hideTip()));
+                m_toolTipManager, SLOT(hideToolTip()));
     }
 
     // initialize preview generator
